--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -19,7 +19,7 @@
     --warning: #ffc107;
     --danger: #dc3545;
     --light: #f8f9fa;
-    --dark: #343a40;
+    --dark: #343a407e;
     --breakpoint-xs: 0;
     --breakpoint-sm: 576px;
     --breakpoint-md: 768px;
@@ -27,6 +27,7 @@
     --breakpoint-xl: 1200px;
     --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; 
+      
   }
 
 html {
@@ -41,6 +42,16 @@ html {
   }
 
 
+
+#titularHome{
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5));
+  background-blend-mode: multiply !important;
+  border-radius: 10px;
+  padding: 2em;
+ 
+}
+
+
 .btn-primary:hover {
   background-color: #6c757d !important;
 }
@@ -51,6 +62,7 @@ html {
     line-height: 1.2;
     /* background: #ffffff; */
     padding: 0 20px;
+
     /* background: #dcdfce;
     background: -moz-linear-gradient(-45deg, #ddd2a4 0%, #ffffff 100%)!important;
     background: -webkit-gradient(left top, right bottom, color-stop(0%, #dcdfce), color-stop(100%, #ffffff)) !important;
@@ -61,6 +73,7 @@ html {
     background: -o-linear-gradient(315deg, #dcdfce 0%, #ffffff 100%) !important;
     background: linear-gradient(135deg, #dcdfce 0%, #ffffff 100%) !important;
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dcdfce', endColorstr='#ffffff', GradientType=1 ) !important; } */
+    
     background-color: transparent !important;
     background: transparent;
   }
