--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -249,6 +249,11 @@ html {
       background-position:bottom;
     }
 
+    #PortadaNeuroNutL2{
+      background-image:url('../images/NeuroNut2.jpg');
+      background-position:bottom;
+    }
+
 
 
 
